# jcode

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  install.sh  jcode_api.py  key_debug.cpp  lsp.py
.configs/configs/: init.py
.configs/configs/colors/: ayu_mirage.py  catppuccin_mocha.py  dracula.py  gruvbox_dark.py  jcode_nvim.py  jot_nvim.py  kanagawa_dragon.py  monokai.py  nord.py  onedark.py  solarized_dark.py  tokyonight.py
.configs/configs/plugins/: README.md
.github/workflows/: cmake-single-platform.yml
apps/jot/: CMakeLists.txt  main.cpp
build-gui/: jcode-gui
build_install_check/: CTestTestfile.cmake  DartConfiguration.tcl
build_install_check/Testing/Temporary/: CTestCostData.txt
build_install_check/tests/: CTestTestfile.cmake  jot_tests
cmake/: JotPython.cmake
docs/: PLUGINS.md  THEMES.md
include/jot/: editor.hpp  editor_features.hpp  jot.hpp
python/: jcode_api.py  jot_api.py  lsp.py  lsp_manager.py  lsp_plugin.py  theme_plugin.py
src/: CMakeLists.txt  autoclose.cpp  autoclose.h  bracket.cpp  config.cpp  editor.cpp  editor.h  editor_command.cpp  editor_cursor.cpp  editor_edit.cpp  editor_explorer.cpp  editor_file.cpp  editor_input.cpp  editor_panes.cpp  editor_render.cpp  editor_render_ui.cpp  editor_search.cpp  editor_sidebar.cpp  features.cpp  features.h  imageviewer.cpp  imageviewer.h  main.cpp  python_api.cpp  python_api.h  syntax.cpp  telescope.cpp  telescope.h  terminal.cpp  terminal.h  ui.cpp  ui.h
src/core/: bookmarks.cpp  editor.cpp  editor.h  editor_bookmarks.cpp  editor_event_loop.cpp  editor_file.cpp  editor_git.cpp  editor_home.cpp  editor_host_api.cpp  editor_integrated_terminal.cpp  editor_lsp.cpp  editor_panes.cpp  editor_popup.cpp  editor_theme.cpp  editor_types.h  editor_undo.cpp  editor_utils.cpp  editor_workspace.cpp  event_loop.cpp  file.cpp  home.cpp  host_api.cpp  host_api.h  integrated_terminal.cpp  lsp.cpp  panes.cpp  popup.cpp  types.h  undo.cpp  utils.cpp  workspace.cpp
src/edit/: edit.cpp  editor_clipboard.cpp  editor_cursor.cpp  editor_edit.cpp  editor_lines.cpp  editor_search.cpp  editor_sidebar.cpp  feature_increment.cpp  feature_join_lines.cpp  feature_replace.cpp  feature_reverse_lines.cpp  feature_shuffle_lines.cpp  feature_sort_desc.cpp  feature_stats.cpp  feature_surround.cpp  feature_trim_blank.cpp  feature_unique_lines.cpp  lines.cpp  search.cpp  sidebar.cpp  transform.cpp
src/features/: autoclose.cpp  bracket.cpp  bracket.h  config.cpp  config.h  editor_features.cpp  editor_features.h  syntax.cpp  text_features.cpp  text_features.h
src/input/: command_actions.cpp  command_navigation.cpp  command_palette.cpp  command_utils.cpp  editor_command_actions.cpp  editor_command_line.cpp  editor_command_navigation.cpp  editor_command_palette.cpp  editor_mode_dispatch.cpp  editor_mode_insert.cpp  editor_mode_normal.cpp  editor_mode_transitions.cpp  editor_mode_visual.cpp  editor_mouse.cpp  mode_dispatch.cpp  mode_insert.cpp  mode_normal.cpp  mode_vim.cpp  mouse.cpp
src/platform/windows/tools/: integrated_terminal.cpp  lsp_client.cpp
src/platform/windows/ui/: terminal.cpp
src/plugins/: python_api.h  python_api_bindings.cpp  python_api_impl.cpp  python_api_impl_core.inc  python_api_impl_editor.inc
src/python/: jot_api.py  lsp.py  lsp_manager.py  lsp_plugin.py  theme_plugin.py
src/python/commands/: __init__.py  builtin.py  editor.py  plugin_admin.py  search_replace.py
src/python/features/: __init__.py  editor_logic.py
src/python/host/: core.py
src/python/runtime/: events.py  palette.py  plugins.py  theme.py
src/render/: editor_render.cpp  editor_render_buffer.cpp  editor_render_easter.cpp  editor_render_minimap.cpp  editor_render_overlay.cpp  editor_render_ui.cpp  render.cpp  render_buffer.cpp  render_overlay.cpp  render_ui.cpp
src/tools/: imageviewer.cpp  imageviewer.h  integrated_terminal.cpp  integrated_terminal.h  lsp_client.cpp  lsp_client.h  telescope.cpp  telescope.h
src/ui/: terminal.cpp  terminal.h  ui.cpp  ui.h
tests/: CMakeLists.txt  test_features.cpp  test_framework.h  test_main.cpp
themes/: dark_clean.py
